--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React app</title>
 
     <!--!React-->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-</head>
-<body>
-    
-</body>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!--!Babel-->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!--!CSS-->
+    <link rel="stylesheet" href="index.css" type="text/css" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="index.js" type="text/babel"></script>
+  </body>
 </html>
